Lots of assets added and player can now move.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Radical Sisyphus</title>
 </head>
 <body>
-    
+    <script src="./lib/phaser.js"></script>
+    <script src="./src/prefabs/Barrier.js"></script>
+    <script src="./src/scenes/Load.js"></script>
+    <script src="./src/scenes/Menu.js"></script>
+    <script src="./src/scenes/Play.js"></script>
+    <script src="./src/main.js"></script>
 </body>
 </html>
