--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
     <script src="./lib/phaser.js"></script>
     <script src="./src/prefabs/Barrier.js"></script>
+    <script src="./src/prefabs/Enemy.js"></script>
     <script src="./src/scenes/Load.js"></script>
     <script src="./src/scenes/Menu.js"></script>
     <script src="./src/scenes/Play.js"></script>
